@@ -1,0 +1,14 @@
+package org.mmisw.iserver.gwt.client.rpc;
+
+
+/**
+ * Info about the result of a createUpdateUserAccount operation.
+ * 
+ * @author Carlos Rueda
+ */
+public class CreateUpdateUserAccountResult extends BaseResult {
+	private static final long serialVersionUID = 1L;
+
+	// TODO
+	
+}
