@@ -4,6 +4,10 @@ Created: 2009-05-13
 $Id$
 
 2009-09-10   1.5.0.alpha20
+
+	- New UserAccountCreatorUpdater
+	- New Server.createUpdateUserAccount
+	
 	- Renamed Config to ServerConfig
 	- ServerConfig: new properties: MAIL_USER, MAIL_PASSWORD
 	- New MailSender helper to send new password to a user ({activation,mail}.jar included)
